--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
 body{
     background: #f5f5f5;
     font-family: "Roboto", sans-serif;
@@ -13,7 +14,7 @@ body{
 .screen.active{
     display: block;
 }
-.app{
+.app {
     position: fixed;
     top: 0px;
     left: 50%;
@@ -29,14 +30,14 @@ body{
 .join-screen .form {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-20%);
     padding: 50px;
 }
 
-.jion-screen .form .form-input{
+.join-screen .form .form-input{
     margin: 10px 0px;
 }
-.join-screen form h2 {
+.join-screen .form h2 {
     font-size: 40px;
     line-height: 45px;
     color : #222;
@@ -51,7 +52,7 @@ body{
     border: none;
     outline: none;
     cursor: pointer;
-}
+} 
 
 .join-screen .form #join-id b {
     color : #222;
@@ -67,4 +68,79 @@ body{
     padding: 10px;
     border: 1px solid #111;
     margin-top: 5px;
+}  
+
+.join-screen .form label {
+    color: #222;
+    font-size: 18px;   
+}
+
+.join-screen .form input {
+    display: block;
+    margin: 10px 0px;
+    width: 100%;
+    max-width: 200px;
+    border: 1px solid #111;
+    color: #111;
+    font-size: 20px;
+    padding: 10px;
+
+}
+
+.fs-screen {
+    padding: 20px;
+}
+.fs-screen .file-input {
+    width: 100%;
+    border: 2px dashed #555;
+}
+
+.fs-screen .file-input label {
+    display: b lock; width: 100%;
+    padding: 40px 50px;
+    text-align: center;
+    color: #111;
+    font-size: 18px;
+} 
+
+.fs-screen .file-input input {
+    display: none;
+}
+
+.fs-screen .files-list {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.fs-screen .files-list .title {
+    width: 100%;
+    font-size: 18p;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.fs-screen .files-list .item {
+    width: 33.33%;
+    min-width: 200px;
+    border: 1px solid #dee;
+    box-shadow: opx opx 5px 2px rgba(0, 0, 0, 0.05);
+}
+
+.fs-screen .files-list .item .progress {
+    padding: 30px;
+    text-align: center;
+    font-size: 50px;
+    font-family: monospace;
+    color: #333;
+
+}
+
+.fs-screen .files-list .item .filename {
+    font-size: 16px;
+    padding: 5px;
+    border-top: 1px solid #333;
+    
 }
